samples/_failures_safe/1761695901_7c63e7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_846e1187.c: In function ‘main’:
./samples/SAFE/__tmp_846e1187.c:122:9: error: expected declaration or statement at end of input
  122 |         fprintf(stderr, "Decompression failed\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_846e1187.c:122:9: error: expected declaration or statement at end of input
